<resources>
    <string name="app_name">Karam</string>
    <string name="log_in">Log In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="are_you_forgot_password">Forgot password ?</string>
    <string name="do_you_have_a_new_account">Do you have a new account?</string>
    <string name="create_an_account">Create a new account</string>
    <string name="user_name">Name</string>
    <string name="phone">Phone Number</string>
    <string name="create_ne_account">Create New Account ?</string>
    <string name="skip">Skip</string>
    <string name="back">Back</string>
    <string name="full_name">Full name</string>
    <string name="phone_number">Phone Number</string>
    <string name="city">City</string>
    <string name="register_as">Register As</string>
    <string name="national_id">shop Name</string>
    <string name="nationel_id">Nationel Id</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="my_information">My InFormation</string>
    <string name="orders">Orders</string>
    <string name="notifications">Notifications</string>
    <string name="no_product_to_display">No Product to Display</string>
    <string name="contact_us">Contact Us</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="about_us">About Us</string>
    <string name="log_out">Log Out</string>
    <string name="wait">Wait...</string>
    <string name="no_order_to_display">No Order to Display</string>
    <string name="no_notification_found">No Notification Found</string>
    <string name="from">From :</string>
    <string name="field_req">Field Required</string>
    <string name="subscribe">SubScribe</string>
    <string name="name">Name</string>
    <string name="amount">Amount</string>
    <string name="price">Price</string>
    <string name="inve">Ivalid Email</string>
    <string name="pass_short">Password Too Short</string>
    <string name="invp">In Correct Password</string>
    <string name="add_to_bage">Add To Bage</string>
    <string name="ch_city">Choose City</string>
    <string name="user_type">Choose User Type</string>
    <string name="pass_equal_confirm">Password Not Equal Confirm</string>
    <string name="em_exist">User Exist</string>
    <string name="suc">Add To Cart Sucess</string>
    <string name="user_phone">User Phone</string>
    <string name="total">Total</string>
    <string name="current_order">Current Orders</string>
    <string name="finish_order">Previous</string>
    <string name="complete_order">Complete Order</string>
    <string name="address">Address</string>
    <string name="detials">Detials</string>
    <string name="send">Send</string>
    <string name="edit">Edit</string>
    <string name="product_name">Product name</string>
    <string name="reset_password">Reset Password</string>
    <string name="forgot">Forgot</string>
    <string name="if_you_need_help_resetting_your_password_we_can_help_by_sending_you_alink_to_reset_it">If you need help resetting your password we can help by sending you alink to reset it</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="more">More</string>
    <string name="cart">cart</string>
    <string name="unsubscribe">unsubscribe</string>
    <string name="Onging">Onging Order</string>
    <string name="canceled">Cancelled Order</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="my_orders">My Orders</string>
    <string name="my_sub">My Subscribe</string>
    <string name="language_setting">Language Setting</string>
    <string name="change_language">Change Language</string>
    <string name="catogries">Catogries</string>
    <string name="most_popular">Most PoPular</string>
    <string name="user">User</string>
    <string name="super_visor">Super Visor</string>
    <string name="representative">representative</string>
    <string name="national_image">National Image</string>
    <string name="upload_picture">Upload Picture</string>
    <string name="select_a_picture_to_upload">Select a Picture to Upload</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="perm_image_denied">Permission image denied</string>
    <string name="done">Done</string>
    <string name="dont_choose">Dont Choose Image From Google Drive</string>
    <string name="products">Products</string>
    <string name="representative_number">representative Number : </string>
    <string name="map_api_key">AIzaSyD8vqW-npiyqulaBvEnoUsuhgA_gbZ5zew</string>
    <string name="if_you_look">if you looking for aproduct and didn,t found it !!! , Don,t worry send us prosucts detials and we biring it for you .</string>
    <string name="special_order">Special Order</string>
    <string name="search"> search</string>

</resources>
