<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_bg"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/user_type"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:background="@color/black"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            />
        <TextView
            android:id="@+id/tv_msg1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textSize="17sp"
            android:textColor="@color/black"
            android:text="@string/user"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:background="@color/black"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            />

        <TextView
            android:id="@+id/tv_msg2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textSize="17sp"
            android:textColor="@color/black"
            android:text="@string/super_visor"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:background="@color/black"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            />

        <TextView
            android:id="@+id/tv_msg3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textSize="17sp"
            android:textColor="@color/black"
            android:text="@string/representative"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:background="@color/black"
            android:layout_marginTop="10dp"
            />

    </LinearLayout>
</layout>
