<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    >
    <data>

        <variable
            name="backListener"
            type="com.elkhelj.karam.interfaces.Listeners.BackListener"
            />
        <variable
            name="orderModel"
            type="com.elkhelj.karam.models.Order_Upload_Model" />
        <variable
            name="lang"
            type="String" />


    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray0"
        android:orientation="vertical"

        >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/white"
            app:contentInsetEnd="0dp"
            app:contentInsetStart="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetRight="0dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:onClick="@{()->backListener.back()}"
                >
                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/ic_arrow_right"
                    android:tint="@color/colorPrimary"
                    android:padding="8dp"
                    android:clickable="false"
                    android:longClickable="false"
                    android:rotation='@{lang.equals("en")?180:0}'
                    />
                <TextView
                    android:id="@+id/tvname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:textColor="@color/colorPrimary"
                    android:clickable="false"
                    android:longClickable="false"
                    android:textSize="16sp"
                    android:text="@string/complete_order"
                    android:gravity="center"
                    />
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            android:fillViewport="true"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                >

                <EditText
                    android:id="@+id/edtAdname"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:singleLine="true"
                    android:background="@drawable/edt_bg"
                    android:layout_marginTop="8dp"
                    android:textColorHint="@color/gray4"
                    android:textColor="@color/black"
                    android:textSize="13sp"
                    android:hint="@string/user_name"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    error="@{orderModel.name_error}"
                    android:text="@={orderModel.name}"

                    />


                <EditText
                    android:id="@+id/edtAddress"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:background="@drawable/edt_bg"
                    android:hint="@string/address"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray4"
                    android:gravity="center_vertical"
                    android:layout_marginTop="8dp"
                    android:imeOptions="actionSearch"
                    android:singleLine="true"
                    error="@{orderModel.address_error}"
                    android:text="@={orderModel.address}"
                    />

                <fragment
                    android:id="@+id/map"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_marginTop="15dp"
                    android:name="com.google.android.gms.maps.SupportMapFragment"
                    />


                <Button
                    android:id="@+id/btnSend"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:text="@string/send"
                    android:background="@drawable/btn_sign_up"
                    android:paddingLeft="50dp"
                    android:paddingRight="50dp"
                    android:layout_marginBottom="30dp"
                    />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</layout>
