<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="lang"
            type="String" />
       <variable
           name="loginModel"
           type="com.elkhelj.taza.models.LoginModel" />
        <variable
            name="loginListener"
            type="com.elkhelj.taza.interfaces.Listeners.LoginListener" />
        <variable
            name="newAccountListener"
            type="com.elkhelj.taza.interfaces.Listeners.CreateAccountListener" />
        <variable
            name="skipListener"
            type="com.elkhelj.taza.interfaces.Listeners.SkipListener" />
        <variable
            name="showDialogListener"
            type="com.elkhelj.taza.interfaces.Listeners.ShowCountryDialogListener" />


    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:fitsSystemWindows="true"
        android:scrollbars="none"
android:background="@drawable/signin"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >
            <ImageView
                android:id="@+id/logo"
                android:layout_width="200dp"
                android:layout_height="150dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp"
                android:src="@drawable/logo"

                />


            <LinearLayout
                android:id="@+id/ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logo"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                app:layout_constraintVertical_bias=".3"
                >


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    >


                    <EditText
                        android:id="@+id/edtEmail"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:background="@color/transparent"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/white"
                        android:textSize="14sp"
                        android:text="@={loginModel.email}"
                        error="@{loginModel.error_email}"



                        />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/colorPrimary"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    >


                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:passwordToggleTint="@color/white"
                        app:passwordToggleEnabled="true"
                        app:hintEnabled="false"
                        app:errorEnabled="false"
                        >
                        <EditText
                            android:id="@+id/edtPassword"
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:singleLine="true"
                            android:background="@color/transparent"
                            android:inputType="textPassword"
                            android:textColor="@color/black"
                            android:paddingLeft="5dp"
                            android:paddingRight="5dp"
                            android:hint="@string/password"
                            android:textSize="14sp"
                            android:textColorHint="@color/white"
                            android:text="@={loginModel.password}"
                            error="@{loginModel.error_password}"


                            />

                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/colorPrimary"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >
                <TextView
                    android:id="@+id/tvNoAccount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/btnLogin"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/textColor"
                    android:textSize="14sp"
                    android:text="@string/create_ne_account"

                   android:layout_weight="1"
                    />

                <TextView
                    android:id="@+id/tvfotgot"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/btnLogin"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/textColor"
                    android:textSize="14sp"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/are_you_forgot_password"
                    />
</LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="0dp"
                android:layout_height="40dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="25dp"
                android:background="@drawable/btn_sign_up"
                app:layout_constraintVertical_bias="0"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:text="@string/login"
                android:textAllCaps="false"
                android:onClick="@{()->loginListener.checkDataLogin(loginModel.email,loginModel.password)}"
                />


            <TextView
                android:id="@+id/tv_skip"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:text="@string/skip"
                android:textColor="@color/textColor"
                android:textSize="16sp"
                android:gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnLogin"
                app:layout_constraintVertical_bias="0"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>