<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"

    >
    <data>
        <variable
            name="lang"
            type="String" />
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:fitsSystemWindows="true"
        android:background="@color/white"
        >
        <LinearLayout
            android:id="@+id/llProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <LinearLayout
                android:id="@+id/llabout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:layout_constraintTop_toTopOf="parent"

                >


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="start|center"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/about_us"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:clickable="false"
                    android:longClickable="false"
                    />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_vertical"
                    android:clickable="false"
                    android:longClickable="false"
                    android:padding="18dp"
                    android:src="@drawable/ic_arrow_right"
                    android:tint="@color/black"
                    android:rotation='@{lang.equals("en")?180:0}'

                    />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/black"
                />
            <LinearLayout
                android:id="@+id/llterms"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:layout_constraintTop_toTopOf="parent"

                >


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="start|center"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/terms_conditions"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:clickable="false"
                    android:longClickable="false"
                    />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_vertical"
                    android:clickable="false"
                    android:longClickable="false"
                    android:padding="18dp"
                    android:src="@drawable/ic_arrow_right"
                    android:tint="@color/black"
                    android:rotation='@{lang.equals("ar")?180:0}'

                    />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/black"
                />

            <LinearLayout
                android:id="@+id/llContact"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:layout_constraintTop_toTopOf="parent"

                >


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="start|center"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/contact_us"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:clickable="false"
                    android:longClickable="false"
                    />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_vertical"
                    android:clickable="false"
                    android:longClickable="false"
                    android:padding="18dp"
                    android:src="@drawable/ic_arrow_right"
                    android:tint="@color/black"
                    android:rotation='@{lang.equals("ar")?180:0}'

                    />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/black"
                />
            <LinearLayout
                android:id="@+id/lllgout"

                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:layout_constraintTop_toTopOf="parent"

                >


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="start|center"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/log_out"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:clickable="false"
                    android:longClickable="false"
                    />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_vertical"
                    android:clickable="false"
                    android:longClickable="false"
                    android:padding="18dp"
                    android:src="@drawable/ic_arrow_right"
                    android:tint="@color/black"
                    android:rotation='@{lang.equals("ar")?180:0}'

                    />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/black"
                />


        </LinearLayout>
    </ScrollView>
</layout>
